# training_project_1

./: .env.example  .flake8  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  read_utils.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_operations.json  test_operations_error.json  test_processing.py  test_read_utils.py  test_utils.py  test_widget.py
